--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Distance-estimated 3D fractals</title>
+
+    <meta name="description" content="A workbench for experimenting with distance-estimated fractals.">
+    <meta property="og:title" content="Distance-estimated 3D fractals">
+    <meta property="og:description" content="A workbench for experimenting with distance-estimated fractals.">
+    <meta property="og:type" content="website">
+
     <style>
         * {
             box-sizing: border-box;
