--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-    <canvas id="triangleCanvas"></canvas>
+    <canvas id="webgl2_surface"></canvas>
     <script>
         const vertices = new Float32Array([
             -1.0, 1.0, 0.0, // top left
@@ -128,7 +128,7 @@
         }
         `;
 
-        const canvas = document.getElementById('triangleCanvas');
+        const canvas = document.getElementById('webgl2_surface');
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
 
