--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,36 @@
             return canvas.getContext('webgl2', options);
         }
 
+        function createPipeline(gl, vertexShaderSource, fragmentShaderSource, onError) {
+            const vertShader = gl.createShader(gl.VERTEX_SHADER);
+            const fragShader = gl.createShader(gl.FRAGMENT_SHADER);
+
+            gl.shaderSource(vertShader, vertexShaderSource.trim());
+            gl.compileShader(vertShader);
+
+            if (!gl.getShaderParameter(vertShader, gl.COMPILE_STATUS)) {
+                onError(gl.getShaderInfoLog(vertShader));
+            }
+
+            gl.shaderSource(fragShader, fragmentShaderSource.trim());
+            gl.compileShader(fragShader);
+
+            if (!gl.getShaderParameter(fragShader, gl.COMPILE_STATUS)) {
+                onError(gl.getShaderInfoLog(fragShader));
+            }
+
+            const program = gl.createProgram();
+            gl.attachShader(program, vertShader);
+            gl.attachShader(program, fragShader);
+            gl.linkProgram(program);
+
+            if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+                onError(gl.getProgramInfoLog(program));
+            }
+
+            return program;
+        }
+
         const gl = createWebGL2Context('webgl2_surface', { antialias: true });
 
         if (!gl) {
@@ -145,42 +175,21 @@
         }
 
         gl.viewport(0, 0, gl.drawingBufferWidth, gl.drawingBufferHeight);
+        gl.clearColor(0, 0, 0, 1);
 
-        const vertShader = gl.createShader(gl.VERTEX_SHADER);
-        const fragShader = gl.createShader(gl.FRAGMENT_SHADER);
-
-        gl.shaderSource(vertShader, vertexShader.trim());
-        gl.compileShader(vertShader);
-        if (gl.getShaderParameter(vertShader, gl.COMPILE_STATUS)) {
-            console.log(gl.getShaderInfoLog(vertShader));
-        }
-
-        gl.shaderSource(fragShader, fragmentShader.trim());
-        gl.compileShader(fragShader);
-        if (gl.getShaderParameter(fragShader, gl.COMPILE_STATUS)) {
-            console.log(gl.getShaderInfoLog(fragShader));
-        }
-
-        const prog = gl.createProgram();
-        gl.attachShader(prog, vertShader);
-        gl.attachShader(prog, fragShader);
-        gl.linkProgram(prog);
-        if (!gl.getProgramParameter(prog, gl.LINK_STATUS)) {
-            console.error(gl.getProgramInfoLog(prog));
-        }
-        gl.useProgram(prog);
+        const program = createPipeline(gl, vertexShader, fragmentShader, console.error);
+        gl.useProgram(program);
 
         const screenArray = gl.createVertexArray();
         gl.bindVertexArray(screenArray);
 
         const vertexBuffer = gl.createBuffer();
-        const positionCoord = gl.getAttribLocation(prog, "position");
+        const positionCoord = gl.getAttribLocation(program, "position");
         gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer);
         gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
         gl.vertexAttribPointer(positionCoord, 3, gl.FLOAT, false, 0, 0);
         gl.enableVertexAttribArray(positionCoord);
 
-        gl.clearColor(0, 0, 0, 1);
         gl.clear(gl.COLOR_BUFFER_BIT);
         gl.drawArrays(gl.TRIANGLES, 0, 6);
     </script>
