--- a/public/index.html
+++ b/public/index.html
@@ -174,6 +174,8 @@
             gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
             gl.vertexAttribPointer(positionCoord, 3, gl.FLOAT, false, 0, 0);
             gl.enableVertexAttribArray(positionCoord);
+
+            return vertexBuffer;
         }
 
         const gl = createWebGL2Context('webgl2_surface', { antialias: true });
@@ -191,10 +193,15 @@
 
         const screenArray = gl.createVertexArray();
         gl.bindVertexArray(screenArray);
-        createAndBindVertexBuffer(gl, program, vertices);
+        const vertexBuffer = createAndBindVertexBuffer(gl, program, vertices);
 
-        gl.clear(gl.COLOR_BUFFER_BIT);
-        gl.drawArrays(gl.TRIANGLES, 0, 6);
+        function render() {
+            gl.clear(gl.COLOR_BUFFER_BIT);
+            gl.drawArrays(gl.TRIANGLES, 0, 6);
+            window.requestAnimationFrame(render);
+        }
+
+        window.requestAnimationFrame(render);
     </script>
 </body>
 
