--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,8 @@
         in vec3 vPosition;
         out vec4 fragColor;
 
+        uniform vec3 uLightPosition;
+
         float distance_from_sphere(in vec3 p, in vec3 c, in float r)
         {
             return length(p - c) - r;
@@ -103,8 +105,7 @@
 
                 if (distance_to_closest < MINIMUM_HIT_DISTANCE) {
                     vec3 normal = compute_normal(current_position);
-                    vec3 light_position = vec3(2.0, -5.0, 3.0);
-                    vec3 light_direction = normalize(current_position - light_position);
+                    vec3 light_direction = normalize(current_position - uLightPosition);
                     float diffuse_intensity = max(0.0, dot(normal, light_direction));
                     return vec4(vec3(1.0, 0.0, 0.0) * diffuse_intensity, distance_to_closest * 1000.0);
                 }
@@ -195,10 +196,25 @@
 
         const screenArray = gl.createVertexArray();
         gl.bindVertexArray(screenArray);
+
         const vertexBuffer = createAndBindVertexBuffer(gl, program, vertices);
+
+        let lightPosition = { x: 0.0, y: 0.0, z: 5.0 };
+        let radians = 0.0;
+        const radiansOffset = 0.05;
+        const lightPositionLocation = gl.getUniformLocation(program, "uLightPosition");
+        gl.uniform3fv(lightPositionLocation, [lightPosition.x, lightPosition.y, lightPosition.z]);
 
         function render() {
             gl.clear(gl.COLOR_BUFFER_BIT);
+
+            lightPosition.x = 10.0 * Math.cos(radians);
+            lightPosition.y = 10.0 * Math.sin(radians);
+            gl.uniform3fv(lightPositionLocation, [lightPosition.x, lightPosition.y, lightPosition.z]);
+
+            radians += radiansOffset;
+            radians %= 2.0 * Math.PI;
+
             gl.drawArrays(gl.TRIANGLES, 0, 6);
             window.requestAnimationFrame(render);
         }
