--- a/public/index.html
+++ b/public/index.html
@@ -200,28 +200,36 @@
 
         const vertexBuffer = createAndBindVertexBuffer(gl, program, vertices);
 
-        let lightPosition = { x: 0.0, y: 0.0, z: 5.0 };
+        let lightPosition = [0.0, 0.0, 5.0];
         let radians = 0.0;
         const radiansOffset = 0.05;
         const lightPositionLocation = gl.getUniformLocation(program, "uLightPosition");
-        gl.uniform3fv(lightPositionLocation, [lightPosition.x, lightPosition.y, lightPosition.z]);
+        gl.uniform3fv(lightPositionLocation, lightPosition);
 
         let coeffs = [5.0, 5.0, 5.0, 0.25];
+        const coeffsLimits = { lower: -30.0, upper: 30.0 };
+        let coeffsFactors = { x: 1.0, y: -1.0, offset: 0.1 };
         const coeffsLocation = gl.getUniformLocation(program, "uCoeffs");
         gl.uniform4fv(coeffsLocation, coeffs);
 
         function render() {
             gl.clear(gl.COLOR_BUFFER_BIT);
 
-            lightPosition.x = 10.0 * Math.cos(radians);
-            lightPosition.y = 10.0 * Math.sin(radians);
-            gl.uniform3fv(lightPositionLocation, [lightPosition.x, lightPosition.y, lightPosition.z]);
+            lightPosition[0] = 10.0 * Math.cos(radians);
+            lightPosition[1] = 10.0 * Math.sin(radians);
+            gl.uniform3fv(lightPositionLocation, lightPosition);
 
             radians += radiansOffset;
             radians %= 2.0 * Math.PI;
 
-            coeffs[0] += 0.1;
-            coeffs[1] -= 0.1;
+            coeffs[0] += coeffsFactors.offset * coeffsFactors.x;
+            coeffs[1] -= coeffsFactors.offset * coeffsFactors.y;
+            if (coeffs[0] < coeffsLimits.lower || coeffs[0] > coeffsLimits.upper) {
+                coeffsFactors.x *= -1.0;
+            }
+            if (coeffs[1] < coeffsLimits.lower || coeffs[1] > coeffsLimits.upper) {
+                coeffsFactors.y *= -1.0;
+            }
             gl.uniform4fv(coeffsLocation, coeffs);
 
             gl.drawArrays(gl.TRIANGLES, 0, 6);
