--- a/public/index.html
+++ b/public/index.html
@@ -35,20 +35,8 @@
 
 <body>
     <canvas id="webgl2_surface"></canvas>
+    <script src="common.js"></script>
     <script>
-        const vertexShader = `
-        #version 300 es
-
-        in vec4 position;
-        out vec2 vPosition;
-        
-        void main()
-        {
-            vPosition = position.zw;
-            gl_Position = vec4(position.xy, 0.0, 1.0);
-        }
-        `;
-
         const fragmentShader = `
         #version 300 es
         precision highp float;
@@ -123,101 +111,9 @@
         }
         `;
 
-        function createWebGL2Context(id, options, onError) {
-            const canvas = document.getElementById(id);
-
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-
-            const gl = canvas.getContext('webgl2', options);
-
-            if (!gl) {
-                onError("WebGL 2 is not available!");
-                canvas.parentElement.innerHTML = "This example requires WebGL 2 which is unavailable on this device.";
-            } else {
-                gl.viewport(0, 0, gl.drawingBufferWidth, gl.drawingBufferHeight);
-                gl.clearColor(0, 0, 0, 1);
-            }
-
-            return gl;
-        }
-
-        function getScreenRectVertices() {
-            if (window.innerWidth > window.innerHeight) {
-                const base = window.innerHeight;
-                const bigger = window.innerWidth;
-                const scale = bigger / base;
-                const offset = (scale - 1) / 2;
-
-                return new Float32Array([
-                    -1.0, 1.0, -1.0 - offset, 1.0, // top left
-                    -1.0, -1.0, -1.0 - offset, -1.0, // bottom left
-                    1.0, -1.0, 1.0 + offset, -1.0, // bottom right
-                    1.0, -1.0, 1.0 + offset, -1.0, // bottom right
-                    1.0, 1.0, 1.0 + offset, 1.0, // top right
-                    -1.0, 1.0, -1.0 - offset, 1.0 // top left
-                ]);
-            } else {
-                const base = window.innerWidth;
-                const bigger = window.innerHeight;
-                const scale = bigger / base;
-                const offset = (scale - 1) / 2;
-
-                return new Float32Array([
-                    -1.0, 1.0, -1.0, 1.0 + offset, // top left
-                    -1.0, -1.0, -1.0, -1.0 - offset, // bottom left
-                    1.0, -1.0, 1.0, -1.0 - offset, // bottom right
-                    1.0, -1.0, 1.0, -1.0 - offset, // bottom right
-                    1.0, 1.0, 1.0, 1.0 + offset, // top right
-                    -1.0, 1.0, -1.0, 1.0 + offset // top left
-                ]);
-            }
-        }
-
-        function createPipeline(gl, vertexShaderSource, fragmentShaderSource, onError) {
-            const vertShader = gl.createShader(gl.VERTEX_SHADER);
-            const fragShader = gl.createShader(gl.FRAGMENT_SHADER);
-
-            gl.shaderSource(vertShader, vertexShaderSource.trim());
-            gl.compileShader(vertShader);
-
-            if (!gl.getShaderParameter(vertShader, gl.COMPILE_STATUS)) {
-                onError(gl.getShaderInfoLog(vertShader));
-            }
-
-            gl.shaderSource(fragShader, fragmentShaderSource.trim());
-            gl.compileShader(fragShader);
-
-            if (!gl.getShaderParameter(fragShader, gl.COMPILE_STATUS)) {
-                onError(gl.getShaderInfoLog(fragShader));
-            }
-
-            const program = gl.createProgram();
-            gl.attachShader(program, vertShader);
-            gl.attachShader(program, fragShader);
-            gl.linkProgram(program);
-
-            if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-                onError(gl.getProgramInfoLog(program));
-            }
-
-            return program;
-        }
-
-        function createAndBindVertexBuffer(gl, program, vertices) {
-            const vertexBuffer = gl.createBuffer();
-            const positionCoord = gl.getAttribLocation(program, "position");
-            gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer);
-            gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
-            gl.vertexAttribPointer(positionCoord, 4, gl.FLOAT, false, 0, 0);
-            gl.enableVertexAttribArray(positionCoord);
-
-            return vertexBuffer;
-        }
-
         const gl = createWebGL2Context('webgl2_surface', { antialias: true }, console.error);
 
-        const program = createPipeline(gl, vertexShader, fragmentShader, console.error);
+        const program = createPipeline(gl, defaultVertexShader, fragmentShader, console.error);
         gl.useProgram(program);
 
         const screenArray = gl.createVertexArray();
@@ -245,9 +141,7 @@
         const sphereColorLocation = gl.getUniformLocation(program, "uSphereColor");
         gl.uniform3fv(sphereColorLocation, sphereColor);
 
-        function render() {
-            gl.clear(gl.COLOR_BUFFER_BIT);
-
+        function step() {
             lightPosition[0] = 10.0 * Math.cos(radians);
             lightPosition[1] = 10.0 * Math.sin(radians);
             gl.uniform3fv(lightPositionLocation, lightPosition);
@@ -264,12 +158,9 @@
                 coeffsFactors.y *= -1.0;
             }
             gl.uniform4fv(coeffsLocation, coeffs);
-
-            gl.drawArrays(gl.TRIANGLES, 0, 6);
-            window.requestAnimationFrame(render);
         }
 
-        window.requestAnimationFrame(render);
+        window.requestAnimationFrame(() => render(step));
     </script>
 </body>
 
