Handle window resize without needing to refresh
Previously, on a window resize, the shape would get distorted. Now, on a
resize, the WebGL viewport is resize accordingly, and the coordinates of
the rect that covers the whole screen are updated as well.

--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,8 @@
         }
         `;
 
-        const gl = createWebGL2Context('webgl2_surface', { antialias: true }, console.error);
+        const canvas = document.getElementById('webgl2_surface');
+        const gl = createWebGL2Context(canvas, { antialias: true }, console.error);
 
         const program = createPipeline(gl, defaultVertexShader, fragmentShader, console.error);
         gl.useProgram(program);
@@ -160,6 +161,9 @@
             gl.uniform4fv(coeffsLocation, coeffs);
         }
 
+        window.addEventListener('resize', () => {
+            onResize(gl, canvas, vertexBuffer);
+        }, false);
         window.requestAnimationFrame(() => render(step));
     </script>
 </body>
