--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,11 @@
             const float MINIMUM_HIT_DISTANCE = 0.001;
             const float MAXIMUM_TRACE_DISTANCE = 1000.0;
 
+            const vec3 light_color = vec3(1.0, 1.0, 0.0);
+            const float ambient_strength = 0.05;
+            const vec3 ambient = ambient_strength * light_color;
+            const float specular_strength = 1.0;
+
             for (int i = 0; i < NUMBER_OF_STEPS; ++i) {
                 vec3 current_position = ray_origin + total_distance_travelled * ray_direction;
                 float distance_to_closest = map_the_world(current_position);
@@ -89,7 +94,15 @@
                     vec3 normal = compute_normal(current_position);
                     vec3 light_direction = normalize(current_position - uLightPosition);
                     float diffuse_intensity = max(0.0, dot(normal, light_direction));
-                    return vec4(uSphereColor * diffuse_intensity, distance_to_closest * 1000.0);
+                    vec3 diffuse = uSphereColor * diffuse_intensity;
+
+                    vec3 view_dir = normalize(current_position - ray_origin);
+                    vec3 reflect_dir = reflect(-light_direction, normal);
+                    float spec = pow(max(dot(view_dir, reflect_dir), 0.0), 32.0);
+                    vec3 specular = specular_strength * spec * light_color;
+                    vec3 result = (ambient + diffuse + specular) * uSphereColor;
+
+                    return vec4(result, distance_to_closest * 1000.0);
                 }
 
                 if (total_distance_travelled > MAXIMUM_TRACE_DISTANCE) {
